fixed spacing

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ video {
     margin-right: -53px; */
     display: grid;
     grid-template-columns: 50% 50%;
-    width:fit-content;
+
 
 }
 
